syntax = "proto3";

option csharp_namespace = "GrpcGreeter";

service GrpcService {
rpc GrpcProc (GrpcRequest) returns (GrpcResponse);
}
// The request message
message GrpcRequest {
string name = 1;
int32 age = 2;
}
// The response message
message GrpcResponse {
string message = 1;
int32 days = 2;
}
